# molecular-boltzmann-diffusion

./: README.md  pyproject.toml
examples/: diffusion-model-param.ipynb  train_gauss_mixture.py  train_glycine_with_data.py  train_morse.py  train_water.py  visualize-model-gauss-mixture.ipynb  visualize-model-molecule.ipynb
examples/data/glycine/: Glycine.mol  relaxed_positions_glycine.npy
examples/data/water/: relaxed_positions_water.npy
src/moldiv/: twodim.py  util.py
src/moldiv/molecule/: __init__.py  loss.py  transformer.py  util.py
