[project]
name = "moldiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.2",
    "numpy>=2.1.1",
    "pytorch-pfn-extras>=0.7.7",
    "scipy>=1.14.1",
    "torch>=2.4.1",
    "tqdm>=4.66.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ase>=3.23.0",
    "nglview>=3.1.2",
    "ipython>=8.27.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "polars>=1.8.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "ruff>=0.6.7",
]

[tool.ruff.lint]
ignore = ["E731"]
